# free-pdf-editor

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.tmp/pdfium/: pdfium-win-x64.tgz
.tmp/pdfium/extract/: PDFiumConfig.cmake
app/: Cargo.toml
app-desktop/: Cargo.toml  build.rs
app-desktop-qt/: Cargo.toml
app-desktop-qt/src/: main.rs
app-desktop/src/: constants.rs  controller.rs  i18n.rs  main.rs
app-desktop/src/models/: delete_image_placement_command.rs  delete_text_at_op_command.rs  image_hit.rs  inserted_text_anchor.rs  mod.rs  pending_annotation_tool.rs  render_task.rs  text_hit.rs  update_image_transform_command.rs  update_note_content_command.rs  update_text_at_op_command.rs
app-desktop/ui/: app.slint
app/src/: main.rs
build_mingw/: compile_commands.json
build_mingw/.lupdate/: PDFEditor_lupdate_project.cmake
build_mingw/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
build_mingw/.qt/rcc/: pdf-editor_translations.qrc  qrc_pdf-editor_translations.cpp
build_mingw/src/: 1.fpe.json
build_mingw/src/app_autogen/: deps
build_mingw/src/cache_autogen/: deps
build_mingw/src/document_autogen/: deps
build_mingw/src/editor_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_mingw/src/ocr_autogen/: deps
build_mingw/src/overlay_autogen/: deps
build_mingw/src/pdf-editor_autogen/: deps
build_mingw/src/pdf_engine_autogen/: deps
build_mingw/src/translations/: pdfditor_cs.qm  pdfditor_de.qm  pdfditor_en_US.qm  pdfditor_es.qm  pdfditor_fr.qm  pdfditor_pl.qm  pdfditor_ru.qm
build_mingw/src/ui_autogen/: deps  (+2 more)
core/: Cargo.toml
core/src/: cache.rs  command_loop.rs  lib.rs  state.rs
core/src/crash/: hook.rs  mod.rs  report.rs  uploader.rs
docs/: qt-migration.md
electron/: tsconfig.json
electron/src/: main.js  main.ts  preload.js  preload.ts
patches/mupdf-sys/: build.rs
pdf-annotations/: Cargo.toml
pdf-annotations/src/: commands.rs  io.rs  lib.rs  types.rs
pdf-core/: Cargo.toml
pdf-core/src/: command.rs  document.rs  error.rs  event.rs  lib.rs  ocr.rs  plugin.rs
pdf-editor/: Cargo.toml
pdf-editor/src/: image.rs  lib.rs  ocr.rs  page.rs  security.rs  text.rs
pdf-engine/: Cargo.toml
pdf-engine/src/: lib.rs
pdf-forms/: Cargo.toml
pdf-forms/src/: commands.rs  creator.rs  detector.rs  exporter.rs  lib.rs  types.rs
pdf-ocr/: Cargo.toml
pdf-ocr/src/: lib.rs
pdf-render/: Cargo.toml
pdf-render/src/: cache.rs  lib.rs  renderer.rs  types.rs
platform/: Cargo.toml
platform/macos/: Info.plist.template  entitlements.plist
platform/src/: lib.rs
platform/updater/: Cargo.toml
platform/updater/src/: checker.rs  installer.rs  lib.rs  manifest.rs
platform/windows/: AppxManifest.xml.template
release/: features.json  release.json
scripts/: build_macos.sh  build_windows.ps1  generate_release_json.py  notarize_macos.sh  run_e2e_windows.ps1  setup_qt_mingw_env.ps1  sign_macos.sh  validate_metadata.py
services/licensing/: Cargo.toml  build.rs
services/licensing/src/: error.rs  feature.rs  lib.rs  manager.rs  state.rs  storage.rs  types.rs
services/telemetry/: Cargo.toml
shared/: Cargo.toml
shared/src/: lib.rs
src/: CMakeLists.txt  global.d.ts  main.jsx  main.tsx  styles.css
src/app/: Application.cpp  Application.h  main.cpp
src/cache/: PageRenderCache.cpp  PageRenderCache.h
src/core/: SystemStatus.tsx
src/core/pdf/: exportService.js  exportService.test.js  exportService.test.ts  exportService.ts  ocrService.js  ocrService.ts  pdfjsService.js  pdfjsService.ts
src/document/: Document.cpp  Document.h  DocumentMetadata.h  PageModel.cpp  PageModel.h
src/editor/: Command.h  EditorController.cpp  EditorController.h  SelectionManager.cpp  SelectionManager.h  UndoStack.cpp  UndoStack.h
src/editor/commands/: AddAnnotationCommand.cpp  AddAnnotationCommand.h  AddTextEditCommand.cpp  AddTextEditCommand.h  DeletePageCommand.cpp  DeletePageCommand.h  InsertImageCommand.cpp  InsertImageCommand.h  MoveObjectCommand.cpp  MoveObjectCommand.h  ReplaceTextCommand.cpp  ReplaceTextCommand.h
src/modules/editor/: EditorPanel.jsx  EditorPanel.tsx  editorService.js  editorService.test.ts  editorService.ts  index.js  index.ts
src/modules/forms/: FormsPanel.jsx  FormsPanel.tsx  formsService.js  formsService.test.ts  formsService.ts  index.js  index.ts
src/modules/viewer/: AnnotationOverlay.jsx  AnnotationOverlay.tsx  OCRPanel.jsx  OCRPanel.tsx  PdfPage.jsx  PdfPage.tsx  PdfPageViewer.jsx  PdfPageViewer.tsx  PdfThumbnail.jsx  PdfThumbnail.tsx  PdfThumbnailsPane.jsx  PdfThumbnailsPane.tsx  PdfWorkspace.jsx  PdfWorkspace.tsx  RightInspectorPane.jsx  RightInspectorPane.tsx  SecurityPanel.jsx  SecurityPanel.tsx  SignaturePanel.jsx  SignaturePanel.tsx
src/ocr/: OCRProcessor.cpp  OCRProcessor.h
src/overlay/: AnnotationObject.cpp  ImageObject.cpp  OverlayObject.h  ShapeObject.cpp  TextEditObject.cpp  TextEditObject.h
src/pdf_engine/: PdfRenderer.cpp  PdfRenderer.h  PdfWriter.cpp  PdfWriter.h  PdfiumBridge.cpp  PdfiumBridge.h
src/resources/: assets.qrc
src/shell/: App.jsx  App.tsx
src/store/: annotationStore.js  annotationStore.test.ts  annotationStore.ts  pageManagementStore.js  pageManagementStore.test.ts  pageManagementStore.ts  pdfDocumentStore.js  pdfDocumentStore.test.ts  pdfDocumentStore.ts
src/translations/: CMakeLists.txt  TRANSLATIONS.md  pdfditor_cs.ts  pdfditor_de.ts  pdfditor_en_US.ts  pdfditor_es.ts  pdfditor_fr.ts  pdfditor_pl.ts  pdfditor_ru.ts
src/ui/: InspectorPanel.cpp  InspectorPanel.h  MainWindow.cpp  MainWindow.h  PageView.cpp  PageView.h  ThumbnailPanel.cpp  ThumbnailPanel.h  Toolbar.cpp  Toolbar.h
src/utils/: FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h
store/: metadata.json
tests/e2e/: README.md  package-lock.json  package.json
tools/: license-check.ps1  license-check.sh
tools/license-generator/: Cargo.toml
tools/license-generator/src/: main.rs
ui/: Cargo.toml
ui/src/: lib.rs
ui/ui/: app.slint
(+224 files in other folders)
