[workspace]
members = [
    "pdf-core",
    "pdf-render",
    "pdf-editor",
    "pdf-ocr",
    "pdf-annotations",
    "pdf-forms",
    "app-desktop",
    "services/licensing",
    "services/telemetry",
    "platform/updater",
    "tools/license-generator",
]
resolver = "2"

[patch.crates-io]
mupdf = { path = "patches/mupdf" }
