[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf-editor"
path = "src/main.rs"

[dependencies]
pdf-core     = { path = "../pdf-core" }
pdf-render   = { path = "../pdf-render" }
pdf-editor   = { path = "../pdf-editor" }
pdf-annotations = { path = "../pdf-annotations" }
pdf-forms    = { path = "../pdf-forms" }
licensing    = { path = "../services/licensing" }
slint        = "1.9"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.9"
serde_json = "1"

[features]
# Enable real MuPDF-backed rasterization.
# Requires cmake, clang/MSVC, and other native build tools to be present.
mupdf = ["pdf-render/mupdf"]
