[package]
name = "app-desktop"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf-editor"
path = "src/main.rs"

[dependencies]
qmetaobject = "0.2"
cstr = "0.2"
pdf-core     = { path = "../pdf-core" }
pdf-render   = { path = "../pdf-render" }
pdf-editor   = { path = "../pdf-editor" }
pdf-annotations = { path = "../pdf-annotations" }
rfd          = "0.15"
tinyfiledialogs = "3.9"
image = "0.25"
base64 = "0.22"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sys-locale = "0.3"

[features]
mupdf = ["pdf-render/mupdf"]

[build-dependencies]
serde_json = "1"
