[package]
name = "app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pdf-editor"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
core = { path = "../core" }
ui = { path = "../ui" }
platform = { path = "../platform" }
slint = "1.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
