[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
pdf-engine = { path = "../pdf-engine" }
lru = "0.12"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
dirs-next = "2"

[dev-dependencies]
tempfile = "3"
