[package]
name = "pdf-annotations"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-core = { path = "../pdf-core" }
lopdf = "0.39"
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
