[package]
name = "pdf-render"
version = "0.1.0"
edition = "2021"

[dependencies]
pdf-core = { path = "../pdf-core" }
lru = "0.12"
mupdf = { version = "0.6.0", optional = true }
tracing = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"

[features]
# Enable real MuPDF-backed rasterization. Requires the MuPDF native library
# (and its build toolchain: cmake, clang/MSVC) to be present at compile time.
mupdf = ["dep:mupdf"]
