[package]
name = "updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tracing    = "0.1"
ureq       = { version = "2", features = ["json"] }
semver     = "1"
sha2       = "0.10"
hex        = "0.4"

[dev-dependencies]
tempfile = "3"
