[package]
name = "licensing"
version = "0.1.0"
edition = "2021"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
