[package]
name = "license-generator"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "license-generator"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
